# fs-ai-perception

./: .gitattributes  .gitignore  README.md
src/cone_detector/: CMakeLists.txt  package.xml  setup.py
src/cone_detector/cone_detector/: cone_detector_node.py
src/cone_detector/msg/: DetectedCone3D.msg
src/cone_mapper/: package.xml  setup.cfg  setup.py
src/cone_mapper/cone_mapper/: cone_mapper.py  visualise_world_cones.py
src/eufs_msgs/: CMakeLists.txt
src/eufs_msgs/msg/: CarForces.msg  ConeWithColorProbabilityArray.msg  OSS.msg
src/eufs_sim/eufs_launcher/src/eufs_launcher/: LauncherModule.py
src/eufs_sim/eufs_plugins/: package.xml
src/eufs_sim/eufs_plugins/gazebo_race_car_model/src/: gazebo_ros_race_car_model.cpp
src/eufs_sim/eufs_plugins/gazebo_simulate_bounding_boxes/: CMakeLists.txt
src/eufs_sim/eufs_rqt/src/eufs_rqt/: EUFSRobotSteeringGUI.py
src/slam_example/: CMakeLists.txt  package.xml
src/slam_example/config/: camera_and_slam_settings.yaml
src/slam_example/include/slam_example/: image_grabber_stereo.hpp  image_grabber_stereo_inertial.hpp
src/slam_example/launch/: slam_example.launch.py  slam_stereo_inertial.launch.py
src/slam_example/src/: image_grabber_stereo.cpp  image_grabber_stereo_inertial.cpp  orb_slam3_stereo.cpp  orb_slam3_stereo_inertial.cpp
